 o Corrected bug [1437845] milliseconds are lost under JRE 1.3 by applying
   the patch attached to the issue.
 o Corrected bug [1696767] incorrect ResultSetMetaData when useLOBS=false by
   applying the patch mentioned in the issue.
 o Corrected bug [1453552] JTDS Driver returns wrong column type with sybase
   by applying the patch attached to the issue.
 
06/23/2006 - Matt Brinkley
 o Oops...checked in some test code.  I backed out those changes.

06/23/2006 - Matt Brinkley
 o Fixed the flags passed for NTLMv2 authentication.  Before the fix,
   authentication would fail in configuration where Minimum Session
   Security for NTLM SSP based (including secure RPC) Servers setting
   was set to 'Require NTLM v2 session security'.

05/19/2006 - Alin Sinpalean
 o Fix the previous changelist. Copy-paste didn't really help there.

05/18/2006 - Alin Sinpalean
 o Added support for SNAPSHOT transaction isolation, in the same way as the
   new MS driver -- using setTransactionIsolation(4096).

04/05/2006 - Matt Brinkley
 o NTLMv2 auth fix: now it doesn't NPE if server fails to send target info.

03/23/2006 - Matt Brinkley
 o Added NTLMv2 support for windows authentication.

01/12/2006 - David Kilzer
 o Applied Mike Hutchinson's fix for Bug [1403067] ProtocolException:
   Invalid table TAB_NAME_TOKEN.  TdsCore.tdsTableNameToken() now handles
   tables referenced using server.database.owner.table syntax.  Also
   modified exception code to include the unknown TAB_NAME_TOKEN value.

12/22/2005 - David Kilzer
 o Replaced JtdsObjectFactoryUnitTest.testAllProperties() method with an
   inner class that extends DefaultPropertiesTestLibrary to make this
   test class fail automatically when a new property is added to the
   library class.  Removed stale comments in JtdsDataSourceUnitTest.
 o Fixed Bug [1386615] Connecting across domains with named pipes fails
   on Windows.  New 'useJCIFS' boolean parameter added that will force