@@ -54,7 +54,7 @@ import java.util.LinkedList;
  * @see java.sql.ResultSet
  *
  * @author Mike Hutchinson
- * @version $Id: JtdsStatement.java,v 1.60 2007-07-08 17:28:23 bheineman Exp $
+ * @version $Id: JtdsStatement.java,v 1.61 2007-07-08 19:26:57 bheineman Exp $
  */
 public class JtdsStatement implements java.sql.Statement {
     /*
@@ -326,19 +326,76 @@ public class JtdsStatement implements java.sql.Statement {
     }
 
     /**
-     * This method should be over-ridden by any sub-classes that place values
-     * other than <code>String</code>s into the <code>batchValues</code> list
-     * to handle execution properly.
-     *
-     * @param value SQL <code>String</code> or list of parameters to execute
-     * @param last  <code>true</code> if this is the last query/parameter list
-     *              in the batch
+     * Execute the SQL batch on a MS server.
+     * @param size the total size of the batch.
+     * @param executeSize the maximum number of statements to send in one request.
+     * @param counts the returned update counts.
+     * @return Chained exceptions linked to a <code>SQLException</code>.
+     * @throws SQLException
      */
-    protected void executeBatchOther(Object value, boolean last)
-            throws SQLException {
-        throw new SQLException(
-                Messages.get("error.statement.badbatch",
-                        value.toString()), "HYC00");
+    protected SQLException executeMSBatch(int size, int executeSize, ArrayList counts)
+    throws SQLException {
+        SQLException sqlEx = null;
+        tds.startBatch();
+        for (int i = 0; i < size;) {
+            Object value = batchValues.get(i);
+            ++i;
+            // Execute batch now if max size reached or end of batch
+            boolean executeNow = (i % executeSize == 0) || i == size;
+
+            tds.executeSQL((String)value, null, null, true, 0, -1, -1, executeNow);
+
+            // If the batch has been sent, process the results
+            if (executeNow) {
+                sqlEx = tds.getBatchCounts(counts, sqlEx);
+
+                // If a serious error then we stop execution now as count 
+                // is too small.
+                if (sqlEx != null && counts.size() != i) {
+                    break;
+                }
+            }
+        }
+        return sqlEx;
+    }
+    
+    /**
+     * Execute the SQL batch on a Sybase server.
+     * <p/>Sybase needs to have the SQL concatenated into one TDS language
+     * packet. This method will be overriden for PreparedStatements.
+     * @param size the total size of the batch.
+     * @param executeSize the maximum number of statements to send in one request.
+     * @param counts the returned update counts.
+     * @return Chained exceptions linked to a <code>SQLException</code>.
+     * @throws SQLException
+     */
+    protected SQLException executeSybaseBatch(int size, int executeSize, ArrayList counts)
+    throws SQLException {
+        StringBuffer sql = new StringBuffer(size * 32); // Make buffer reasonable size
+        SQLException sqlEx = null;
+
+        for (int i = 0; i < size;) {
+            Object value = batchValues.get(i);
+            ++i;
+            // Execute batch now if max size reached or end of batch
+            boolean executeNow = (i % executeSize == 0) || i == size;
+
+            sql.append((String)value).append(' ');
+            
+            if (executeNow) {
+                tds.executeSQL(sql.toString(), null, null, true, 0, -1, -1, true);
+                sql.setLength(0);
+                // If the batch has been sent, process the results
+                sqlEx = tds.getBatchCounts(counts, sqlEx);
+
+                // If a serious error or a server error then we stop
+                // execution now as count is too small.
+                if (sqlEx != null && counts.size() != i) {
+                    break;
+                }
+            }
+        }
+        return sqlEx;
     }
 
     /**
@@ -857,31 +914,11 @@ public class JtdsStatement implements java.sql.Statement {
         ArrayList counts = new ArrayList(size);
 
         try {
-            tds.startBatch();
-            for (int i = 0; i < size;) {
-                Object value = batchValues.get(i);
-                ++i;
-                // Execute batch now if max size reached or end of batch
-                boolean executeNow = (i % executeSize == 0) || i == size;
-
-                if (value instanceof String) {
-                    tds.executeSQL((String)value, null, null, true, 0, -1, -1,
-                            executeNow);
-                } else {
-                    executeBatchOther(value, executeNow);
-                }
-
-                // If the batch has been sent, process the results
-                if (executeNow) {
-                    sqlEx = tds.getBatchCounts(counts, sqlEx);
-
-                    // If a serious error or a MS server error then we stop
-                    // execution now as count is too small. Sybase continues,
-                    // flagging failed updates in the count array.
-                    if (sqlEx != null && counts.size() != i) {
-                        break;
-                    }
-                }
+            if (connection.getServerType() == Driver.SYBASE
+                && connection.getTdsVersion() == Driver.TDS50) {
+                sqlEx = executeSybaseBatch(size, executeSize, counts);
+            } else {
+                sqlEx = executeMSBatch(size, executeSize, counts);
             }
             //
             // Ensure array is the same size as the original statement list
