@@ -19,6 +19,8 @@ Changes from jTDS 1.2
    applying the patch mentioned in the issue.
  o Corrected bug [1453552] JTDS Driver returns wrong column type with sybase
    by applying the patch attached to the issue.
+ o Corrected bug [1374518] rollback fails on Sybase 12.5 by applying the patch
+   attached to the issue.
  
 06/23/2006 - Matt Brinkley
  o Oops...checked in some test code.  I backed out those changes.
